# CodeX

./: .gitignore  README.md  codex.bat  install.ps1  pyproject.toml  run_test.ps1
calculator/techVid/: primeChecker.ts
docs/: 00_START_HERE.txt  CLI_TRANSFORMATION_COMPLETE.txt  EXAMPLES.md  INDEX.md  INSTALL.md  QUICKREF.txt  README.md  quickstart.py
src/codex/: __init__.py  call_function.py  cli.py  config.py  main.py  prompts.py
tests/: test_get_file_content.py  test_get_files_info.py  test_run_python_file.py  test_write_file.py  testopen.py
